:recycle: 로직 수정